<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">wApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">wApp</string>
    <string name="register_text">Register</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="action_websearch">Web search</string>
    <string name="action_search">Sarch</string>
    <string name="action_location_found">Location Found</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_help">Help</string>
    <string name="action_check_updates">Check for Updates</string>
    <string name="action_logout">Logout</string>
    <string name="product_text">Add Product</string>
    <string name="gallery_text">Gallery</string>

</resources>